syntax = "proto3";

package redish;

import "google/protobuf/wrappers.proto";


service Redish {
  // https://redis.io/commands
  rpc get (Key) returns (SingleValue) {}
  rpc set (SetRequest) returns (OK) {}
  // has to be dele not del because python del is a keyword
  rpc dele (KeyList) returns (IntValue) {}
  rpc exists (KeyList) returns (IntValue) {}
  rpc incr (Key) returns (IntValue) {}
  rpc decr (Key) returns (IntValue) {}
  rpc incrby (KeyIntValue) returns (IntValue) {}
  rpc decrby (KeyIntValue) returns (IntValue) {}
  rpc strlen (Key) returns (IntValue) {}
  rpc getset (KeyValue) returns (SingleValue) {}
  rpc mget (KeyList) returns (ValueList) {}
  rpc mset (KeyValueList) returns (OK) {}
  rpc type (Key) returns (SingleValue) {}
  rpc expire (KeyIntValue) returns (IntValue) {}
  rpc pexpire (KeyIntValue) returns (IntValue) {}
  rpc expireat (KeyIntValue) returns (IntValue) {}
  rpc pexpireat (KeyIntValue) returns (IntValue) {}
  rpc persist (Key) returns (IntValue) {}
  rpc ttl (Key) returns (IntValue) {}
  rpc pttl (Key) returns (IntValue) {}
}

message Key {
  string key = 1;
}

message KeyValue {
  string key = 1;
  string value = 2;
}

message KeyList {
  repeated Key keys = 1;
}

message KeyValueList {
  repeated KeyValue pairs = 1;
}

message SingleValue {
  google.protobuf.StringValue value = 1;
}

message IntValue {
  sint64 value = 1;
}

message KeyIntValue {
  string key = 1;
  sint64 value = 2;
}

message ValueList {
  repeated SingleValue values = 1;
}

// distinct from KeyValue because redis SET command has more features that this doesn't support yet
message SetRequest {
  string key = 1;
  string value = 2;
}

message OK {}
